[gd_scene load_steps=155 format=2]

[ext_resource path="res://sprites/shot_fired/pixil-frame-5 (1).png" type="Texture" id=1]
[ext_resource path="res://sprites/shot_fired/pixil-frame-2 (1).png" type="Texture" id=5]
[ext_resource path="res://sprites/shot_fired/pixil-frame-3 (1).png" type="Texture" id=6]
[ext_resource path="res://sprites/shot_fired/pixil-frame-6 (1).png" type="Texture" id=7]
[ext_resource path="res://sprites/shot_fired/pixil-frame-0 (5).png" type="Texture" id=8]
[ext_resource path="res://player/StandIn_Swordsman_v01.png" type="Texture" id=9]
[ext_resource path="res://player/wd.wav" type="AudioStream" id=11]
[ext_resource path="res://sprites/shot_fired/pixil-frame-4 (1).png" type="Texture" id=14]
[ext_resource path="res://sprites/shot_fired/pixil-frame-1 (1).png" type="Texture" id=15]
[ext_resource path="res://sprites/fire_circles_50x50px.png" type="Texture" id=16]
[ext_resource path="res://player/playerNode.gd" type="Script" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 0, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 128, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 256, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 384, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 9 )
region = Rect2( 512, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 9 )
region = Rect2( 640, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 9 )
region = Rect2( 768, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 896, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 1024, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 1152, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 9 )
region = Rect2( 1280, 512, 128, 128 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 9 )
region = Rect2( 0, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 9 )
region = Rect2( 128, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 9 )
region = Rect2( 256, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 9 )
region = Rect2( 384, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 9 )
region = Rect2( 512, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 9 )
region = Rect2( 640, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 9 )
region = Rect2( 768, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 9 )
region = Rect2( 896, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 9 )
region = Rect2( 1024, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 9 )
region = Rect2( 1152, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 9 )
region = Rect2( 1280, 896, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 9 )
region = Rect2( 0, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 9 )
region = Rect2( 128, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 9 )
region = Rect2( 256, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 9 )
region = Rect2( 384, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 9 )
region = Rect2( 512, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 9 )
region = Rect2( 640, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 9 )
region = Rect2( 768, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 9 )
region = Rect2( 896, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 9 )
region = Rect2( 1024, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 9 )
region = Rect2( 1152, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 9 )
region = Rect2( 1280, 768, 128, 128 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 9 )
region = Rect2( 0, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 9 )
region = Rect2( 128, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 9 )
region = Rect2( 256, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 9 )
region = Rect2( 384, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 9 )
region = Rect2( 512, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 9 )
region = Rect2( 640, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 9 )
region = Rect2( 768, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 9 )
region = Rect2( 896, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 9 )
region = Rect2( 1024, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 9 )
region = Rect2( 1152, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 9 )
region = Rect2( 1280, 384, 128, 128 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 9 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 9 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 9 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 9 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 9 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 9 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 9 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 9 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 9 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 9 )
region = Rect2( 256, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 9 )
region = Rect2( 384, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 9 )
region = Rect2( 512, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 9 )
region = Rect2( 640, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 9 )
region = Rect2( 768, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 9 )
region = Rect2( 896, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 9 )
region = Rect2( 1024, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 9 )
region = Rect2( 1152, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 9 )
region = Rect2( 1280, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 9 )
region = Rect2( 0, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 9 )
region = Rect2( 128, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 9 )
region = Rect2( 256, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 9 )
region = Rect2( 384, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 9 )
region = Rect2( 512, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 9 )
region = Rect2( 640, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 9 )
region = Rect2( 768, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 9 )
region = Rect2( 896, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 9 )
region = Rect2( 1024, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 9 )
region = Rect2( 1152, 640, 128, 128 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 9 )
region = Rect2( 1280, 640, 128, 128 )

[sub_resource type="SpriteFrames" id=79]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": true,
"name": "up",
"speed": 15.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "attack_up",
"speed": 15.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ) ],
"loop": true,
"name": "attack_side",
"speed": 20.0
}, {
"frames": [ SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "attack_down",
"speed": 15.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 16 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 16 )
region = Rect2( 100, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 16 )
region = Rect2( 150, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 16 )
region = Rect2( 200, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 16 )
region = Rect2( 250, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 16 )
region = Rect2( 300, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 16 )
region = Rect2( 350, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 16 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 16 )
region = Rect2( 50, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 16 )
region = Rect2( 100, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 16 )
region = Rect2( 150, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 16 )
region = Rect2( 200, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 16 )
region = Rect2( 250, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 16 )
region = Rect2( 300, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 16 )
region = Rect2( 350, 50, 50, 50 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 16 )
region = Rect2( 0, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 16 )
region = Rect2( 50, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 16 )
region = Rect2( 100, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 16 )
region = Rect2( 150, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 16 )
region = Rect2( 200, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 16 )
region = Rect2( 250, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 16 )
region = Rect2( 300, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 16 )
region = Rect2( 350, 100, 50, 50 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 16 )
region = Rect2( 0, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 16 )
region = Rect2( 50, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 16 )
region = Rect2( 100, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 16 )
region = Rect2( 150, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 16 )
region = Rect2( 200, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 16 )
region = Rect2( 250, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 16 )
region = Rect2( 300, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 16 )
region = Rect2( 350, 150, 50, 50 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 16 )
region = Rect2( 0, 200, 50, 50 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 16 )
region = Rect2( 50, 200, 50, 50 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 16 )
region = Rect2( 100, 200, 50, 50 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 16 )
region = Rect2( 150, 200, 50, 50 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 16 )
region = Rect2( 200, 200, 50, 50 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 16 )
region = Rect2( 250, 200, 50, 50 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 16 )
region = Rect2( 300, 200, 50, 50 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 16 )
region = Rect2( 350, 200, 50, 50 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 16 )
region = Rect2( 0, 250, 50, 50 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 16 )
region = Rect2( 50, 250, 50, 50 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 16 )
region = Rect2( 100, 250, 50, 50 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 16 )
region = Rect2( 150, 250, 50, 50 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 16 )
region = Rect2( 200, 250, 50, 50 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 16 )
region = Rect2( 250, 250, 50, 50 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 16 )
region = Rect2( 300, 250, 50, 50 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 16 )
region = Rect2( 350, 250, 50, 50 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 16 )
region = Rect2( 0, 300, 50, 50 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 16 )
region = Rect2( 50, 300, 50, 50 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 16 )
region = Rect2( 100, 300, 50, 50 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 16 )
region = Rect2( 150, 300, 50, 50 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 16 )
region = Rect2( 200, 300, 50, 50 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 16 )
region = Rect2( 250, 300, 50, 50 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 16 )
region = Rect2( 300, 300, 50, 50 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 16 )
region = Rect2( 350, 300, 50, 50 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 16 )
region = Rect2( 0, 350, 50, 50 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 16 )
region = Rect2( 50, 350, 50, 50 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 16 )
region = Rect2( 100, 350, 50, 50 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 16 )
region = Rect2( 150, 350, 50, 50 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 16 )
region = Rect2( 200, 350, 50, 50 )

[sub_resource type="SpriteFrames" id=144]
animations = [ {
"frames": [ SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ) ],
"loop": true,
"name": "default",
"speed": 50.0
} ]

[sub_resource type="SpriteFrames" id=80]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 15 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 1 ), ExtResource( 7 ) ],
"loop": false,
"name": "default",
"speed": 32.0
} ]

[sub_resource type="RectangleShape2D" id=82]
extents = Vector2( 303.577, 299.514 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 21 )

[node name="sounds" type="Node2D" parent="."]

[node name="move_sound" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 11 )
volume_db = -8.0
pitch_scale = 1.2
autoplay = true

[node name="no_spawn_area" type="Area2D" parent="."]
visible = false

[node name="collision_polygon" type="CollisionPolygon2D" parent="no_spawn_area"]
polygon = PoolVector2Array( -100, -100, 100, -100, 100, 100, -100, 100 )

[node name="player_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_area"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="shoot_release_timer" type="Timer" parent="."]
wait_time = 0.16
one_shot = true

[node name="move_timer" type="Timer" parent="."]
wait_time = 0.07
one_shot = true

[node name="playerSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -26 )
frames = SubResource( 79 )
animation = "down"
frame = 2
playing = true

[node name="gun_temporary" type="AnimatedSprite" parent="playerSprite"]
show_behind_parent = true
position = Vector2( 0, 25.3 )
scale = Vector2( 2.24, 2.24 )
frames = SubResource( 144 )
frame = 31
playing = true
offset = Vector2( 0, -0.75 )

[node name="shot_fired" type="AnimatedSprite" parent="playerSprite/gun_temporary"]
visible = false
position = Vector2( -20.5015, -4.27606 )
rotation = -1.5708
scale = Vector2( 0.537923, 0.702161 )
frames = SubResource( 80 )
frame = 4

[node name="attack_path" type="AnimatedSprite" parent="playerSprite/gun_temporary"]
position = Vector2( -405.358, 4.33185 )
rotation = 3.14159
scale = Vector2( 3.32031, 2.00893 )
playing = true

[node name="shooting_zone" type="Area2D" parent="playerSprite/gun_temporary/attack_path"]
position = Vector2( 38.9248, 0.163684 )
rotation = 1.57079
scale = Vector2( 0.0162964, 0.555969 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerSprite/gun_temporary/attack_path/shooting_zone"]
position = Vector2( -23.6945, -5.92419 )
shape = SubResource( 82 )
disabled = true
[connection signal="timeout" from="shoot_release_timer" to="." method="_on_shoot_release_timer_timeout"]
[connection signal="body_entered" from="playerSprite/gun_temporary/attack_path/shooting_zone" to="." method="_on_shooting_zone_body_entered"]
